# tux-mod-manager

./: .gitignore  README.md  package-lock.json  package.json
src/: App.vue  Mixins.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  mod_downloader.rs  mod_manager.rs  ofs.rs
src-tauri/src/config/: game.rs
src-tauri/src/mod_downloader/: core.rs  download.rs  utils.rs
src-tauri/src/mod_manager/: game.rs  ofs.rs
src/assets/: known_path_extensions.json  supported-games.json  supported_games.json
src/components/: Download.vue  MainPanel.vue  Mod.vue  ModDownloader.vue  ModInstaller.vue  ModList.vue  ModManager.vue  SideBar.vue
