[package]
name = "app"
version = "0.1.0"
description = "The Rust backend controlling Tux Mod Manager"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["api-all"] }
compress-tools = "0.12.2"
dirs = "4.0.0"
steamlocate = "1.0.1"
downloader = "0.2.6"
threadpool = "1.8.1"
failure = { version = "0.1.8", features = [] }
url = "2"
reqwest = { version = "0.11.10", features = ["blocking"] }
tokio = "1"
json = "0.12.4"
webkit2gtk = "*"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
